# geneve

./: .gitignore  .license_ignore  CHANGES.md  Dockerfile  Makefile  README.md  catalog-info.yaml  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.buildkite/docker-security-quality/: pipeline.yml
.buildkite/ess-security-quality/: pipeline.yml
.buildkite/pipelines/: docker-security-quality.yml  ess-security-quality.yml  main.yml  serverless-security-quality-gate.yml  test.yml
.buildkite/quality-gate-testing/: pipeline.yml
.buildkite/serverless-security-quality-gate/: pipeline.yml
.github/agents/: update-detection-engine-rules.agent.md
.github/workflows/: codeql-analysis.yml  main.yml  online-tests.yml  pythonpackage.yml
cmd/: generate.go  geneve.go  python.go  reflect.go  reflect_test.go  reflection.go  root.go  serve.go  serve_test.go  version.go  wait_group.go
cmd/control/: handler.go  ignore_path.go  method_handler.go  path_ignore.go  path_ignore_test.go  server.go  server_test.go  state.go
cmd/geneve/: docs_source.go  docs_source_test.go  http_handlers.go  http_handlers_test.go  source_events.go
cmd/grasp/: http_handlers.go  http_handlers_test.go  ignore.go  ignore_test.go  indices_handler.go  json_field.go  json_field_test.go  ponder.go  ponder_test.go  reflection.go  reflector.go  reflector_test.go
cmd/python/: c-api.go  convert.go  convert_test.go  monitor.go
cmd/utils/: wait_group.go
docs/: api-spec.html  api-spec.yaml  data_model.md  events_generation.md  events_generation_walk-through.ipynb  getting_started.md  ipynb.py
docs/events_generation_presentation/: presentation.ipynb  presentation.py
etc/: kind-config.yml
etc/k8s/: geneve-cfg.yml  geneve-pod.yml  geneve-svc.yml
etc/services/: geneve.yml
geneve/: README.md  __init__.py  __main__.py  cli.py  config.py  constraints.py  events_emitter.py  events_emitter_eql.py  utils.py  webapi.py
geneve/kql/: parser.py
geneve/solver/: __init__.py  boolean.py  date.py  geo.py  group_as.py  group_azure.py  group_event.py  group_geo.py  group_host.py  group_os.py  group_process.py  group_src_dst.py  ip.py  keyword.py  long.py  type_boolean.py  type_date.py  type_geo_point.py  type_ip.py  type_keyword.py  type_long.py  type_scaled_float.py
geneve/stack/: __init__.py  cli.py  prober_ecctl.py  prober_elastic.py  prober_elastic_package.py  prober_geneve_test_env.py
geneve/utils/: __init__.py  ast_dag.py  dirs.py  epr.py  es.py  hdict.py  integration.py  kibana.py  resource.py  shelllib.py  solution_space.py
scripts/: generate-alerts.sh  generate-network-events.sh  gnv-clean.sh  gnv-test.sh  license_check.sh  test-qaf-stack.sh  test-stacks.sh  update-reports.sh
tests/: config.yaml  deployment.json  docker-compose.yml  grasp-ignore.yaml  jupyter.py  kibana.py  test_config.py  test_constraints.py  test_emitter_queries.py  test_emitter_rules.py  test_group_solvers.py  test_jupyter.py  test_shelllib.py  test_solution_space.py  test_stack.py  test_utils.py  utils.py
tests/data/: .gitignore  config_elastic-package.yaml  config_geneve-test-env.yaml  test-resource.ndjson
tests/kuery/: test_dsl.py  test_eql2kql.py  test_evaluator.py  test_kql2eql.py  test_lint.py  test_parser.py
tests/reports/: alerts_from_queries.md  alerts_from_rules-8.10.md  alerts_from_rules-8.11.md  alerts_from_rules-8.12.md  alerts_from_rules-8.13.md  alerts_from_rules-8.14.md  alerts_from_rules-8.15.md  alerts_from_rules-8.16.md  alerts_from_rules-8.17.md  alerts_from_rules-8.18.md  alerts_from_rules-8.19.md  alerts_from_rules-8.2.md  alerts_from_rules-8.3.md  alerts_from_rules-8.4.md  alerts_from_rules-8.5.md  alerts_from_rules-8.6.md  alerts_from_rules-8.7.md  alerts_from_rules-8.8.md  alerts_from_rules-8.9.md  alerts_from_rules-9.0.md  alerts_from_rules-9.1.md  alerts_from_rules-9.2.md  alerts_from_rules-9.3.md  alerts_from_rules-9.4.md  alerts_from_rules-serverless.md  alerts_from_rules.md  documents_from_queries.ipynb  (+25 more)
(+33 files in other folders)
