# Licensed to Elasticsearch B.V. under one or more contributor
# license agreements. See the NOTICE file distributed with
# this work for additional information regarding copyright
# ownership. Elasticsearch B.V. licenses this file to you under
# the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# 	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = geneve
version = attr: geneve.version
description = Generate data from languages and models
url = https://github.com/elastic/geneve
license = Apache 2.0
license_file = LICENSE.txt

[options]
packages =
    geneve
    geneve.kql
    geneve.utils
    geneve.stack
install_requires =
    click
    elasticsearch>=8.2.0
    eql>=0.9.12
    pytoml
    requests
    ruamel.yaml
python_requires = >=3.8.0

[options.entry_points]
console_scripts =
    geneve = geneve.__main__:main

[options.package_data]
* = *.g
